# hermetic-launcher

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  defs.bzl
.bcr/: metadata.template.json
.github/workflows/: ci.yml  publish.yaml  release.yml
finalize-stub/: BUILD.bazel  Cargo.toml
integration-tests/: BUILD.bazel  Cargo.toml  copy_to_directory.bzl  integration_test.sh
integration-tests/src/: main.rs
launcher/private/: extensions.bzl  file_binary_rule.bzl
launcher/private/platform_config_settings/: BUILD.bazel
launcher/private/rules/: launcher_binary.bzl  lib.bzl
launcher/template/: BUILD.bazel
patches/: BUILD.bazel  llvm-copy-subprojects-on-windows.patch  rules-rs-windows-gnullvm-exec.patch  rules-rs-windows-rust-linker.patch  rules-rust-skip-unused-cc-runtime.patch
runfiles-stub/: BUILD.bazel  Cargo.toml
runfiles-stub/.cargo/: config.toml
runfiles-stub/src/: linux.rs  macos.rs  windows.rs
tools/: build-release-binaries.sh
tools/create-release-archive/: Cargo.toml
