[workspace]
members = [
  "runfiles-stub",
  "finalize-stub",
  "integration-tests",
  "tools/create-release-archive",
]
resolver = "2"

[workspace.dependencies]
talc = "4"
apple-codesign = "0.27"
clap = "4.5"
sha2 = "0.10"
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
walkdir = "2"
anyhow = "1.0"

[profile.release.package.runfiles-stub]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.finalize-stub]
opt-level = 3
lto = true
strip = true
