module(
    name = "hermetic_launcher",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

non_module_dependencies = use_extension("//launcher/private:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "finalize_stub_aarch64_linux", "finalize_stub_aarch64_macos", "finalize_stub_x86_64_linux", "finalize_stub_x86_64_macos", "finalize_stub_x86_64_windows", "runfiles_stub_aarch64_linux", "runfiles_stub_aarch64_macos", "runfiles_stub_x86_64_linux", "runfiles_stub_x86_64_macos", "runfiles_stub_x86_64_windows")

register_toolchains("//launcher/private/prebuilt:all")

###################################

bazel_dep(name = "rules_cc", version = "0.2.16", dev_dependency = True)
bazel_dep(name = "rules_platform", version = "0.1.0", dev_dependency = True)
bazel_dep(name = "rules_rs", version = "0.0.27", dev_dependency = True)

# Special toolchains branch
archive_override(
    module_name = "rules_rs",
    integrity = "sha256-YbDRjZos4UmfIPY98znK1BgBWRQ1/ui3CtL6RqxE30I=",
    strip_prefix = "rules_rs-6cf3d940fdc48baf3ebd6c37daf8e0be8fc73ecb",
    url = "https://github.com/dzbarsky/rules_rs/archive/6cf3d940fdc48baf3ebd6c37daf8e0be8fc73ecb.tar.gz",
)

toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2021",
    version = "1.91.0",
)
use_repo(
    toolchains,
    "experimental_rust_toolchains_1_91_0",
)

register_toolchains("@experimental_rust_toolchains_1_91_0//:all")

rules_rust = use_extension("@rules_rs//rs/experimental:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

RUST_TRIPLES = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "aarch64-apple-darwin",
    "aarch64-pc-windows-gnullvm",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-gnullvm",
]

# TODO(zbarsky): Use a workspace instead of 2 packages?
crate = use_extension("@rules_rs//rs:extensions.bzl", "crate", dev_dependency = True)
crate.from_cargo(
    name = "finalize_crates",
    cargo_lock = "//finalize-stub:Cargo.lock",
    cargo_toml = "//finalize-stub:Cargo.toml",
    platform_triples = RUST_TRIPLES,
)
crate.from_cargo(
    name = "runfiles_crates",
    cargo_lock = "//runfiles-stub:Cargo.lock",
    cargo_toml = "//runfiles-stub:Cargo.toml",
    platform_triples = RUST_TRIPLES,
)
crate.from_cargo(
    name = "integration_crates",
    cargo_lock = "//integration-tests:Cargo.lock",
    cargo_toml = "//integration-tests:Cargo.toml",
    platform_triples = RUST_TRIPLES,
)
use_repo(crate, "finalize_crates", "runfiles_crates")
use_repo(crate, "integration_crates")

crate.annotation(
    additive_build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "windows_import_lib",
    static_library = glob(["lib/*.a"])[0],
)
""",
    crate = "windows_x86_64_gnullvm",
    gen_build_script = "off",
    deps = [":windows_import_lib"],
)
crate.annotation(
    additive_build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "windows_import_lib",
    static_library = glob(["lib/*.a"])[0],
)
""",
    crate = "windows_aarch64_gnullvm",
    gen_build_script = "off",
    deps = [":windows_import_lib"],
)

bazel_dep(name = "bzip2", version = "1.0.8.bcr.3")

crate.annotation(
    crate = "bzip2-sys",
    gen_build_script = "off",
    deps = ["@bzip2//:bz2"],
)

inject_repo(crate, "bzip2")

# TODO(zbarsky): BCR module doesn't work on windows arm64 yet
crate.annotation(
    crate = "lzma-sys",
    gen_build_script = "on",
)

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.3", dev_dependency = True)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
    dev_dependency = True,
)
