[package]
name = "runfiles-stub"
version = "0.1.0"
edition = "2021"

[dependencies]
# talc allocator configured for stable Rust (disable allocator and nightly_api features)
# We wrap it manually since we're single-threaded and don't need lock_api
talc = { workspace = true, default-features = false }
